@@ -52,14 +52,14 @@ characters. Try to keep lowercase particles.</td> </tr>
 </table></dl>
 
 <dl><dt><dd><table border=1>
-<tr><td>&nbsp;</td><td>By default, when creating a person, if the
-GEDCOM first name part holds several names separated by spaces, the
-first of this names becomes the person "first name" and the complete
-GEDCOM first name part a "first name alias".</td>
+<tr><td>&nbsp;</td><td>When creating a person, if the GEDCOM first
+name part holds several names separated by spaces, you can ask that
+the first of this names becomes the person "first name" and the
+complete GEDCOM first name part a "first name alias".</td>
 
 <tr>
-<td><input type=checkbox name=no_efn value=on>&nbsp;&nbsp;&nbsp;</td>
-<td>Cancel this option.</td>
+<td><input type=checkbox name=efn value=on>&nbsp;&nbsp;&nbsp;</td>
+<td>Set this option.</td>
 </tr>
 </table></dl>
 
