@@ -52,13 +52,14 @@ part&iacute;culas en min&uacute;sculas.</td> </tr>
 </table></dl>
 
 <dl><dt><dd><table border=1>
-<tr><td>&nbsp;</td><td>Por defecto, al crear una persona, si el campo nombre del fichero
-GEDCOM esta constituido de varios nombres, el primero de ellos ir&aacute; en el campo
-"nombre" y el nombre completo se transforma en un "alias de nombre".</td>
+<tr><td>&nbsp;</td><td>Al crear una persona, si el campo nombre del
+fichero GEDCOM esta constituido de varios nombres, puede preguntar que
+el primero de ellos ir&aacute; en el campo "nombre" y que el nombre
+completo se transforma en un "alias de nombre".</td>
 
 <tr>
-<td><input type=checkbox name=no_efn value=on>&nbsp;&nbsp;&nbsp;</td>
-<td>Anular esta opci&oacute;n.</td>
+<td><input type=checkbox name=efn value=on>&nbsp;&nbsp;&nbsp;</td>
+<td>Poner esta opci&oacute;n.</td>
 </tr>
 </table></dl>
 
