@@ -55,15 +55,15 @@ particules en minuscules.</td> </tr>
 </table></dl>
 
 <dl><dt><dd><table border=1>
-<tr><td>&nbsp;</td><td>Par d&eacute;faut, au moment de la
-cr&eacute;ation d'une personne, si la partie pr&eacute;nom dans le
-GEDCOM est form&eacute;e de plusieurs noms s&eacute;par&eacute;s par
-des espaces, le premier de ces noms va dans la partie "pr&eacute;nom"
-et le pr&eacute;nom complet devient un "pr&eacute;nom alias".</td>
+<tr><td>&nbsp;</td><td>Au moment de la cr&eacute;ation d'une personne,
+si la partie pr&eacute;nom dans le GEDCOM est form&eacute;e de
+plusieurs noms s&eacute;par&eacute;s par des espaces, on peut vouloir
+que le premier de ces noms aille dans la partie "pr&eacute;nom" et que
+le pr&eacute;nom complet devient un "pr&eacute;nom alias".</td>
 
 <tr>
-<td><input type=checkbox name=no_efn value=on>&nbsp;&nbsp;&nbsp;</td>
-<td>Annuler cette option.</td>
+<td><input type=checkbox name=efn value=on>&nbsp;&nbsp;&nbsp;</td>
+<td>Mettre cette option.</td>
 </tr>
 </table></dl>
 
